Fix misalignment on the result model for time element

--- a/less/components/pipeline-result.less
+++ b/less/components/pipeline-result.less
@@ -57,7 +57,7 @@
       margin-right: 10px;
     }
 
-    span {
+    span, time {
       vertical-align: top;
     }
   }
